[gd_scene load_steps=23 format=3 uid="uid://dblumq8nyxrj6"]

[ext_resource type="Script" path="res://scripts/questionmark_box.gd" id="1_h74fq"]
[ext_resource type="Texture2D" uid="uid://mmopqcjj1saw" path="res://Assets/3D Mario Game Assets/qblock_strips.png" id="1_uardi"]
[ext_resource type="Texture2D" uid="uid://uvec7rae7xkb" path="res://Assets/3D Mario Game Assets/Used_Block.png" id="3_80ees"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5eqvj"]
atlas = ExtResource("1_uardi")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_piabk"]
atlas = ExtResource("1_uardi")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7owe"]
atlas = ExtResource("1_uardi")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1aov3"]
atlas = ExtResource("1_uardi")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qshmt"]
atlas = ExtResource("1_uardi")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_27o73"]
atlas = ExtResource("1_uardi")
region = Rect2(120, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahtn7"]
atlas = ExtResource("1_uardi")
region = Rect2(144, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0s18"]
atlas = ExtResource("1_uardi")
region = Rect2(168, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wo46u"]
atlas = ExtResource("1_uardi")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycw7w"]
atlas = ExtResource("1_uardi")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_03ubi"]
atlas = ExtResource("1_uardi")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ou6yl"]
atlas = ExtResource("1_uardi")
region = Rect2(72, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7m24"]
atlas = ExtResource("1_uardi")
region = Rect2(96, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjb0e"]
atlas = ExtResource("1_uardi")
region = Rect2(120, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofber"]
atlas = ExtResource("1_uardi")
region = Rect2(144, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_buqo3"]
atlas = ExtResource("1_uardi")
region = Rect2(168, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_wn8n6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5eqvj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_piabk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7owe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1aov3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qshmt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27o73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahtn7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0s18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wo46u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycw7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_03ubi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ou6yl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7m24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjb0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofber")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_buqo3")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gyicv"]
size = Vector2(24, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l65ft"]
size = Vector2(22.8571, 12)

[node name="questionmark_box" type="StaticBody2D"]
scale = Vector2(3.5, 3.5)
collision_layer = 8
script = ExtResource("1_h74fq")

[node name="anim" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_wn8n6")
autoplay = "default"
frame_progress = 0.233044

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_gyicv")

[node name="empty_block" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.0137143, 0.0137143)
texture = ExtResource("3_80ees")

[node name="Area2D" type="Area2D" parent="."]

[node name="collision" type="CollisionShape2D" parent="Area2D"]
position = Vector2(5.44957e-07, 6)
shape = SubResource("RectangleShape2D_l65ft")
debug_color = Color(0.924188, 4.76494e-05, 0.680971, 0.42)

[node name="spawn_marker" type="Marker2D" parent="."]
position = Vector2(0, -36.8571)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
